back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: default
spec:
  ports:
    - protocol: "TCP"
      port: 8089
      targetPort: 8089
  selector:
    app: spring
  type: NodePort
