front-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: angular
  namespace: default
  labels:
    app: angular

spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  selector:
    app: angular
  type: NodePort
