mysql-service.yaml.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: default
  labels:
      app: mysql
      tier: database 
spec:
  selector:
    app: mysql
    tier: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
